codex-rs/tui-hooks/src/snapshots/codex_tui_hooks__browser__tests__hooks_browser_managed_handler.snap
---
source: tui-hooks/src/browser.rs
expression: "render_lines(&view, 112)"
---
                                                                                                                
  PermissionRequest hooks                                                                                       
  Turn hooks on or off. Your changes are saved automatically.                                                   
                                                                                                                
  [x] Hook 1                                                                                                    
                                                                                                                
  Event     PermissionRequest                                                                                   
  Matcher   Bash                                                                                                
  Source    Admin config                                                                                        
  Command   /enterprise/hooks/permission-check.sh                                                               
  Timeout   30s                                                                                                 
  Trust     Managed                                                                                             
                                                                                                                
  Managed hooks are always on; press esc to go back
